switch lights depending on sunrise/sunset
currently hardcoded with Vienna

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,3 +67,5 @@ futures = "0.3.19"
 gettext-rs = "0.7.0"
 
 serial_test = "0.4.0" # TODO, remove when issues.libelektra.org/4466 is fixed
+
+sunrise = "1.0.0"
