--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,3 +65,11 @@ gettext-rs = "0.7.0"
 serial_test = "0.4.0" # TODO, remove when issues.libelektra.org/4466 is fixed
 
 sunrise = "1.0.0"
+
+serialport = "4.2.1"
+gpio = "0.4.1"
+
+
+[[bin]]
+name = "fc_weather_station"
+path = "src/weather_station/main.rs"
