--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -60,7 +60,7 @@
                 'test': "[14, 15, 13, 15, 11, 15, 7, 15]"            
  
 - name: Add sensor configuration
-  hosts: schreibtisch
+  hosts: sensors
   collections:
    - elektra_initiative.libelektra
   tasks:
