--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
 
     post {
         success {
-            archiveArtifacts artifacts: "target/armv7-unknown-linux-gnueabihf/debian/*.deb", fingerprint: true
+            archiveArtifacts artifacts: "target/armv7-unknown-linux-gnueabihf/debian/*.deb", fingerprint: false
         }
     }
 }
