--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,3 +66,8 @@ serial_test = "0.4.0" # TODO, remove when issues.libelektra.org/4466 is fixed
 
 sunrise = "1.0.0"
 
+libmodbus = {git = "https://github.com/ElektraInitiative/libmodbus-rs.git", branch="impl-modbus_rtu_set_custom_rts"}
+
+[[bin]]
+name = "weatherstation_conn"
+path = "weather_station/connection_modbus.rs"
