--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ elektra = { version = "0.11.0", features = ["pkg-config"] }
 reqwest = "0.9.24"
 
 bme280 = "0.3.0"
+mlx9061x = "0.2.1"
 linux-embedded-hal = { version = "0.3", features = ["gpio_cdev"] }
 
 systemstat = "0.1.11"
