changed Cargo.toml to use elektra 0.11.0 + libmodbus-rs master; clima_sensor_us.rs impl of const and default function; main.rs handle errors via nc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ gpio-cdev = { version = "0.5.1", features = ["async-tokio"]}
 
 i2cdev = "0.5.1"
 
-elektra = { version = "0.10.0", features = ["pkg-config"] }
+elektra = { version = "0.11.0", features = ["pkg-config"] }
 
 reqwest = "0.9.24"
 
@@ -66,7 +66,7 @@ serial_test = "0.4.0" # TODO, remove when issues.libelektra.org/4466 is fixed
 
 sunrise = "1.0.0"
 
-libmodbus = {git = "https://github.com/ElektraInitiative/libmodbus-rs.git", branch="test_lower_bindgen_version"} 
+libmodbus = {git = "https://github.com/ElektraInitiative/libmodbus-rs.git", branch="master"} 
 
 [[bin]]
 name = "weatherstation_dump"
