--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ serial_test = "0.4.0" # TODO, remove when issues.libelektra.org/4466 is fixed
 
 sunrise = "1.0.0"
 
-libmodbus = {git = "https://github.com/ElektraInitiative/libmodbus-rs.git", branch="master"} 
+libmodbus = {git = "https://github.com/ElektraInitiative/libmodbus-rs.git"} 
 
 [[bin]]
 name = "weatherstation_dump"
