--- a/scripts/jenkins/Dockerfile_cross
+++ b/scripts/jenkins/Dockerfile_cross
@@ -47,7 +47,8 @@ RUN apt install -y --no-install-recommends \
     libc6-armhf-cross \
     libc6-dev-armhf-cross \
     gcc-arm-linux-gnueabihf \
-    binutils-arm-linux-gnueabihf
+    binutils-arm-linux-gnueabihf \
+    linux-libc-dev:armhf
 
 # Install deps
 RUN cargo install cargo-deb
