--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ i2cdev = "0.5.1"
 
 elektra = { version = "0.11.0", features = ["pkg-config"] }
 
-reqwest = "0.9.24"
+reqwest = { version = "0.11", features = ["json"] }
 
 bme280 = "0.3.0"
 mlx9061x = "0.2.1"
@@ -60,7 +60,6 @@ signal-hook-tokio = "0.3.1"
 
 tokio = { version = "1.15.0", features = ["full"] }
 futures = "0.3.19"
-
 gettext-rs = "0.7.0"
 
 serial_test = "0.4.0" # TODO, remove when issues.libelektra.org/4466 is fixed
